add vscode files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/python
-# Edit at https://www.toptal.com/developers/gitignore?templates=python
+# Created by https://www.toptal.com/developers/gitignore/api/python,vscode
+# Edit at https://www.toptal.com/developers/gitignore?templates=python,vscode
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -149,5 +149,9 @@ Thumbs.db #thumbnail cache on Windows
 .prof
 
 
-# End of https://www.toptal.com/developers/gitignore/api/python
+### vscode ###
+.vscode/*
+*.code-workspace
+
+# End of https://www.toptal.com/developers/gitignore/api/python,vscode
 
